--- a/XiaoFeng.KuaiShou.csproj
+++ b/XiaoFeng.KuaiShou.csproj
@@ -6,7 +6,7 @@
 		<Authors>Jacky</Authors>
 		<Product>快手开放平台SDK</Product>
 		<Description>快手开放平台SDK</Description>
-		<Copyright>CopyRight @ 2024-2025 魔法精灵(www.eelf.cn) QQ:7092734 Email:jacky@eelf.cn</Copyright>
+		<Copyright>copyright @ 2024-2025 魔法精灵(www.eelf.cn) QQ:7092734 Email:jacky@eelf.cn</Copyright>
 		<Company>魔法精灵</Company>
 		<VersionPrefix>1.0</VersionPrefix>
 		<VersionSuffix>0</VersionSuffix>
